vest-dsl/test/bad/enum_constraint_invalid_variant.vest
my_enum = enum {
  A = 0,
  B = 1,
}

bad_constraint = {
  field: my_enum | C,
}
